--- a/src/app/cadastro/listahqavancado.component.scss
+++ b/src/app/cadastro/listahqavancado.component.scss
@@ -55,23 +55,22 @@ tr.example-element-row:not(.example-expanded-row):active {
   width: 100%;
 }
 
-
-
-td, th {
+td,
+th {
   width: 25%;
 }
-  
-  .img {
-    width: 30px;
-    height: 30px;
-  }
-  
-  .img-full {
-    width: 400px;
-    height: 617px;
-  }
-  
-  .img-responsive {
-    width: 80px;
-    height: 80px;
-  }
+
+.img {
+  width: 30px;
+  height: 30px;
+}
+
+.img-full {
+  width: 400px;
+  height: 617px;
+}
+
+.img-responsive {
+  width: 80px;
+  height: 80px;
+}
