--- a/src/app/shell/header/header.component.html
+++ b/src/app/shell/header/header.component.html
@@ -1,83 +1,89 @@
 <div id="primary-nav">
-<header>
-  <nav class="navbar navbar-expand-lg navbar navbar-dark bg-primary">
-    <a class="navbar-brand" href="/" translate>APP_NAME</a>
-    <button
-      class="navbar-toggler"
-      type="button"
-      aria-controls="navbar-menu"
-      aria-label="Toggle navigation"
-      (click)="toggleMenu()"
-      [attr.aria-expanded]="!menuHidden"
-    >
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div id="navbar-menu" class="collapse navbar-collapse float-xs-none" [ngbCollapse]="menuHidden">
-      <div class="navbar-nav nav-fill w-100" >
-        <a class="nav-item nav-link text-uppercase" routerLink="/home" routerLinkActive="active">
-          <i class="fas fa-home"></i>
-          <span translate>Home</span>
-        </a>
-        <a class="nav-item nav-link text-uppercase" routerLink="/hq" routerLinkActive="active">
-          <i class="fa fa-plus"></i>
-          <span translate>Adicionar HQ</span>
-        </a>
-        <a class="nav-item nav-link text-uppercase" routerLink="/editora" routerLinkActive="active">
-          <i class="fa fa-plus"></i>
-          <span translate>Adicionar Editora</span>
-        </a>     
-        <a class="nav-item nav-link text-uppercase" routerLink="/listahqavancado" routerLinkActive="active">
-          <i class="fas fa-list"></i>
-          <span translate>Busca Avançada de HQS</span>
-        </a>   
-        <a class="nav-item nav-link text-uppercase" routerLink="/frases" routerLinkActive="active">
-          <i class="fas fa-file-upload"></i>
-          <span translate>Frases</span>
-        </a>  
-        <a class="nav-item nav-link text-uppercase" routerLink="/colecao" routerLinkActive="active">
-          <i class="fas fa-file-upload"></i>
-          <span translate>Colecao</span>
-        </a>  
-        <a class="nav-item nav-link text-uppercase" routerLink="/sair"  routerLinkActive="active">
-          <i class="fas fa-sign-out-alt"></i>
-          <span translate>Sair</span>
-        </a>      
-      </div>
-      <div class="dropdown">
-        <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton2" data-bs-toggle="dropdown" aria-expanded="false">
-          Buscas
-        </button>
-        <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="dropdownMenuButton2">
-          <li>
+  <header>
+    <nav class="navbar navbar-expand-lg navbar navbar-dark bg-primary">
+      <a class="navbar-brand" href="/" translate>APP_NAME</a>
+      <button
+        class="navbar-toggler"
+        type="button"
+        aria-controls="navbar-menu"
+        aria-label="Toggle navigation"
+        (click)="toggleMenu()"
+        [attr.aria-expanded]="!menuHidden"
+      >
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div id="navbar-menu" class="collapse navbar-collapse float-xs-none" [ngbCollapse]="menuHidden">
+        <div class="navbar-nav nav-fill w-100">
+          <a class="nav-item nav-link text-uppercase" routerLink="/home" routerLinkActive="active">
+            <i class="fas fa-home"></i>
+            <span translate>Home</span>
+          </a>
+          <a class="nav-item nav-link text-uppercase" routerLink="/hq" routerLinkActive="active">
+            <i class="fa fa-plus"></i>
+            <span translate>Adicionar HQ</span>
+          </a>
+          <a class="nav-item nav-link text-uppercase" routerLink="/editora" routerLinkActive="active">
+            <i class="fa fa-plus"></i>
+            <span translate>Adicionar Editora</span>
+          </a>
+          <a class="nav-item nav-link text-uppercase" routerLink="/listahqavancado" routerLinkActive="active">
+            <i class="fas fa-list"></i>
+            <span translate>Busca Avançada de HQS</span>
+          </a>
+          <a class="nav-item nav-link text-uppercase" routerLink="/frases" routerLinkActive="active">
+            <i class="fas fa-file-upload"></i>
+            <span translate>Frases</span>
+          </a>
+          <a class="nav-item nav-link text-uppercase" routerLink="/colecao" routerLinkActive="active">
+            <i class="fas fa-file-upload"></i>
+            <span translate>Colecao</span>
+          </a>
+          <a class="nav-item nav-link text-uppercase" routerLink="/sair" routerLinkActive="active">
+            <i class="fas fa-sign-out-alt"></i>
+            <span translate>Sair</span>
+          </a>
+        </div>
+        <div class="dropdown">
+          <button
+            class="btn btn-secondary dropdown-toggle"
+            type="button"
+            id="dropdownMenuButton2"
+            data-bs-toggle="dropdown"
+            aria-expanded="false"
+          >
+            Buscas
+          </button>
+          <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="dropdownMenuButton2">
+            <li>
               <a class="nav-item nav-link text-uppercase" routerLink="/listahq" routerLinkActive="active">
-              <i class="fas fa-list"></i>
-              <span translate>HQs</span>
+                <i class="fas fa-list"></i>
+                <span translate>HQs</span>
               </a>
-          </li>
-          <li>
-            <a class="nav-item nav-link text-uppercase" routerLink="/listaeditora" routerLinkActive="active">
-              <i class="fas fa-list"></i>
-              <span translate>Editoras</span>
-            </a>
-          </li>
-          <li>
-            <a class="nav-item nav-link text-uppercase" routerLink="/listadesejo" routerLinkActive="active">
-              <i class="fas fa-list"></i>
-              <span translate>Lista de Desejos</span>
-            </a>
-          </li>
-          <li>
-            <a class="nav-item nav-link text-uppercase" routerLink="/listaleitura" routerLinkActive="active">
-              <i class="fas fa-list"></i>
-              <span translate>Lista de Leitura</span>
-            </a>
-          </li>
-        </ul>
-      </div>
-      <!--<div class="navbar-nav ml-auto">
+            </li>
+            <li>
+              <a class="nav-item nav-link text-uppercase" routerLink="/listaeditora" routerLinkActive="active">
+                <i class="fas fa-list"></i>
+                <span translate>Editoras</span>
+              </a>
+            </li>
+            <li>
+              <a class="nav-item nav-link text-uppercase" routerLink="/listadesejo" routerLinkActive="active">
+                <i class="fas fa-list"></i>
+                <span translate>Lista de Desejos</span>
+              </a>
+            </li>
+            <li>
+              <a class="nav-item nav-link text-uppercase" routerLink="/listaleitura" routerLinkActive="active">
+                <i class="fas fa-list"></i>
+                <span translate>Lista de Leitura</span>
+              </a>
+            </li>
+          </ul>
+        </div>
+        <!--<div class="navbar-nav ml-auto">
         <app-language-selector inNavbar="true" menuClass="dropdown-menu dropdown-menu-right"></app-language-selector>
       </div>-->
-    </div>
-  </nav>
-</header>
+      </div>
+    </nav>
+  </header>
 </div>
