--- a/src/theme/theme-variables.scss
+++ b/src/theme/theme-variables.scss
@@ -51,5 +51,5 @@ $theme-colors: (
 
 // Use Bootstrap defaults for other variables, imported here so we can access all app variables in one place when used
 // in components.
-@import "~bootstrap/scss/_functions";
-@import "~bootstrap/scss/_variables";
+@import "../../node_modules/bootstrap/scss/functions";
+@import "../../node_modules/bootstrap/scss/variables";
