Atualizacao do projeto para docker

--- a/src/app/shell/header/header.component.html
+++ b/src/app/shell/header/header.component.html
@@ -38,6 +38,10 @@
             <i class="fas fa-file-upload"></i>
             <span translate>Colecao</span>
           </a>
+          <a class="nav-item nav-link text-uppercase" routerLink="/listaeditora" routerLinkActive="active">
+            <i class="fas fa-list"></i>
+            <span translate>Editoras</span>
+          </a>
           <a class="nav-item nav-link text-uppercase" routerLink="/sair" routerLinkActive="active">
             <i class="fas fa-sign-out-alt"></i>
             <span translate>Sair</span>
